<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/nav_bg_log_out"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:theme="@style/ThemeOverlay.AppCompat.Dark">

        <!-- Logo AKN TOP-->
        <ImageView
            android:layout_marginTop="30dp"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:src="@drawable/akn_logo_white" />

        <TextView
            android:layout_marginTop="5dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:text="@string/app_full_name"/>

        <!-- Line Top -->
        <View
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="#FFFFFF" />

        <!-- Sign up with Email button -->

        <Button
            android:id="@+id/btnStatistic"
            android:inputType="textCapWords"
            android:layout_marginTop="30dp"
            android:layout_marginRight="10dp"
            android:layout_marginLeft="10dp"
            android:paddingLeft="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/show_popular_news"
            android:drawableLeft="@drawable/ic_star_white_small"
            android:background="@drawable/button_background_gredient2"
            android:textColor="#FFFFFF"/> <!-- android:textColor="#383737" -->

        <Button
            android:id="@+id/btn_sign_up_in_logout_form"
            android:inputType="textCapWords"
            android:layout_marginTop="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginLeft="10dp"
            android:paddingLeft="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sign_up_with_email"
            android:drawableLeft="@drawable/ic_email_small_white"
            android:background="@drawable/button_background_gredient2"
            android:textColor="#FFFFFF"/>
        <!-- android:background="#e2d8d8" android:textColor="#383737" -->

        <!-- Login Text -->
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="horizontal">

            <TextView
                android:layout_marginTop="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:text="@string/already_have_an_account"/>

            <TextView
                android:id="@+id/tv_login"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:textStyle="bold"
                android:textColorHighlight="#8326760b"
                android:inputType="textUri"
                android:text="@string/login"/>

        </LinearLayout>
    </LinearLayout>

    <!-- Setting -->
    <LinearLayout
        android:layout_marginBottom="5dp"
        android:layout_alignParentBottom="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <Button
            android:id="@+id/btn_nav_setting"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:drawableLeft="@drawable/ic_settings_white_24dp"
            android:background="@android:color/transparent"
            android:textColor="#FFFFFF"
            android:text="@string/nav_setting"/>

        <View
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="#FFFFFF" />

        <TextView
            android:layout_marginBottom="0dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:textColor="#FFFFFF"
            android:text="@string/copyright"/>
    </LinearLayout>

</RelativeLayout>