<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:gravity="center_vertical"
                android:orientation="horizontal">
                <com.github.siyamed.shapeimageview.CircularImageView 
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:src="@drawable/dev_buth_mathearo"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="10dp"
                    android:text="@string/buthmathearo"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:gravity="center_vertical"
                android:orientation="horizontal">
                <com.github.siyamed.shapeimageview.CircularImageView
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:src="@drawable/dev_lim_seudy"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="10dp"
                    android:text="@string/limseudy"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:gravity="center_vertical"
                android:orientation="horizontal">
                <com.github.siyamed.shapeimageview.CircularImageView
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:padding="10dp"
                    android:src="@drawable/dev_thorn_sereyvong"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="10dp"
                    android:text="@string/thornsereyvong"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:gravity="center_vertical"
                android:orientation="horizontal">
                <com.github.siyamed.shapeimageview.CircularImageView
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:src="@drawable/dev_chan_dana"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="10dp"
                    android:text="@string/chandana"/>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</FrameLayout>
